--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -1,88 +1,79 @@
-name: Nokia EA0326GMP 固件编译
+name: Nokia EA0326GMP 固件编译 (终极修复版)
 
 on:
+  workflow_dispatch:
   push:
     tags: ['v*']
-  workflow_dispatch:
 
 jobs:
   build:
     runs-on: ubuntu-22.04
-    timeout-minutes: 180
+    timeout-minutes: 240
 
     steps:
-    - name: 1. 检出代码
+    - name: 1. 检出代码 (深度克隆)
       uses: actions/checkout@v4
       with:
         submodules: recursive
         fetch-depth: 0
 
-    - name: 2. 安装基础工具
+    - name: 2. 安装完整依赖
       run: |
         sudo apt-get update -y
         sudo apt-get install -y \
-          build-essential clang flex bison g++ gawk gcc-multilib \
-          gettext git libncurses5-dev libssl-dev python3-distutils \
-          rsync unzip zlib1g-dev file wget cmake ccache
+          build-essential ccache git gcc g++ make \
+          libncurses5-dev libssl-dev python3 python3-distutils \
+          rsync unzip wget cmake pkgconf ack antlr3 gawk \
+          gettext genisoimage libelf-dev libfuse-dev libglib2.0-dev \
+          libltdl-dev libmpc-dev libmpfr-dev libreadline-dev \
+          libtool llvm ninja-build scons squashfs-tools subversion \
+          texinfo uglifyjs upx-ucl xmlto xxd zlib1g-dev jq zstd
 
-    - name: 3. 安装额外依赖
+    - name: 3. 初始化编译环境
       run: |
-        sudo apt-get install -y \
-          bc lm-sensors pciutils libpam-dev libcurl4-openssl-dev \
-          libyaml-cpp-dev libaio-dev libpcre2-dev libselinux1-dev \
-          libunistring-dev libxml2-dev libkmod-dev libtirpc-dev \
-          libgpiod-dev glib2.0-dev jq zstd libzstd-dev
-
-    - name: 4. 初始化ccache
-      run: |
-        sudo mkdir -p /tmp/ccache
-        sudo chown -R $USER:$USER /tmp/ccache
-        echo "CCACHE_DIR=/tmp/ccache" >> $GITHUB_ENV
-        ccache -M 4G
-        ccache -s
-
-    - name: 5. 准备编译环境
-      run: |
+        mkdir -p dl
+        [ -f .config ] || cp configs/ea0326gmp.config .config
         make defconfig
+        make tools/install -j$(nproc)
+        make toolchain/install -j$(nproc)
+
+    - name: 4. 下载源码
+      run: |
         make download -j$(nproc)
         find dl -size -1k -delete
 
-    - name: 6. 编译工具链
-      run: make -j$(nproc) tools/compile toolchain/compile
-
-    - name: 7. 编译固件
+    - name: 5. 分阶段编译
       run: |
-        if ! make -j$(nproc); then
-          echo "::warning::并行编译失败，尝试单线程编译..."
+        # 阶段1：编译基础包
+        make -j$(($(nproc)/2)) package/compile
+        
+        # 阶段2：最终编译
+        if ! make -j$(($(nproc)/2)); then
+          echo "::warning::降级到单线程编译..."
           make -j1 V=s
         fi
 
-    - name: 8. 打包固件
+    - name: 6. 打包成果
       run: |
         mkdir -p artifacts
         cp bin/targets/mediatek/filogic/*.bin artifacts/
         cp bin/targets/mediatek/filogic/*.manifest artifacts/
-        ccache -s > artifacts/ccache.log
+        [ -f logs/error.log ] && cp logs/error.log artifacts/
 
-    - name: 9. 创建发布版本
+    - name: 7. 发布版本
       uses: softprops/action-gh-release@v1
+      if: success()
       with:
         tag_name: ${{ github.ref_name }}
-        name: "EA0326GMP固件 ${{ github.ref_name }}"
+        name: "EA0326GMP-${{ github.ref_name }}"
         body: |
-          ### 固件信息
-          - 型号: Nokia EA0326GMP
-          - 编译时间: $(date +'%Y-%m-%d %H:%M')
-          - 源码版本: $(git rev-parse --short HEAD)
+          ### 编译信息
+          - 时间: $(date +'%Y-%m-%d %H:%M')
+          - 源码: $(git rev-parse --short HEAD)
           
           ### 登录信息
           - IP: 192.168.1.1
-          - 用户名: root
-          - 密码: password
-          
-          ### 刷机说明
-          1. 进入原厂固件升级页面
-          2. 上传本固件文件
-          3. 等待自动重启(约3分钟)
-        files: artifacts/*.bin
-        draft: false
+          - 账号: root/password
+        files: |
+          artifacts/*.bin
+          artifacts/*.manifest
