--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -16,6 +16,29 @@ jobs:
       with:
         submodules: true
         
+    - name: 检查初始空间
+      run: |
+        echo "======================="
+        echo "初始空间使用情况："
+        echo "======================="
+        df -h
+        
+    - name: 清理系统空间
+      run: |
+        sudo apt-get clean
+        sudo apt-get autoremove -y
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /opt/ghc
+        sudo rm -rf /opt/hostedtoolcache/CodeQL
+        sudo rm -rf /opt/microsoft
+        sudo rm -rf /opt/pipx
+        sudo rm -rf /usr/share/swift
+        echo "======================="
+        echo "清理后空间使用情况："
+        echo "======================="
+        df -h
+        
     - name: 安装依赖
       run: |
         sudo apt-get update -y
@@ -44,7 +67,43 @@ jobs:
       run: |
         cd lede
         make defconfig
-        make -j$(nproc) V=s
+        # 使用单核编译，减少内存使用，同时保存日志
+        make -j1 V=s 2>&1 | tee build.log
+        if [ $? -ne 0 ]; then
+          echo "编译失败，保存错误日志"
+          cp build.log ../build_error.log
+          exit 1
+        fi
+        # 编译完成后清理
+        make clean
+        
+    - name: 保存编译日志
+      if: always()
+      run: |
+        if [ -f lede/build.log ]; then
+          cp lede/build.log build.log
+        fi
+        
+    - name: 上传编译日志
+      if: always()
+      uses: actions/upload-artifact@v3
+      with:
+        name: build-logs
+        path: |
+          build.log
+          build_error.log
+        if-no-files-found: ignore
+        
+    - name: 检查编译后空间
+      run: |
+        echo "======================="
+        echo "编译后空间使用情况："
+        echo "======================="
+        df -h
+        echo "======================="
+        du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
+        du -h --max-depth=1 ./build_dir
+        du -h --max-depth=1 ./bin
         
     - name: 创建发布版本
       id: create_release
