--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -6,6 +6,8 @@ on:
   pull_request:
     branches: [ main ]
   workflow_dispatch:
+  schedule:
+    - cron: '0 0 1 * *'  # 每月1号 00:00 运行
 
 jobs:
   build:
@@ -15,6 +17,13 @@ jobs:
     - uses: actions/checkout@v4
       with:
         submodules: true
+        
+    - name: 同步上游源码
+      run: |
+        git remote add upstream https://github.com/coolsnowwolf/lede.git
+        git fetch upstream
+        git merge upstream/master
+        git push origin main
         
     - name: 检查初始空间
       run: |
@@ -94,16 +103,6 @@ jobs:
           build_error.log
         if-no-files-found: ignore
         
-    - name: 检查编译后空间
-      run: |
-        echo "======================="
-        echo "编译后空间使用情况："
-        echo "======================="
-        df -h
-        echo "======================="
-        du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
-        du -h --max-depth=1 ./build_dir
-        du -h --max-depth=1 ./bin
         
     - name: 创建发布版本
       id: create_release
