--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -22,7 +22,7 @@ jobs:
       run: |
         git remote add upstream https://github.com/coolsnowwolf/lede.git
         git fetch upstream
-        git merge upstream/master
+        git merge upstream/master --allow-unrelated-histories
         git push origin main
         
     - name: 检查初始空间
