--- a/.github/workflows/mian.yml
+++ b/.github/workflows/mian.yml
@@ -25,6 +25,13 @@ jobs:
         echo "======================="
         df -h
         
+    # --- 步骤 2: 生成日期变量 ---
+    - name: 生成日期变量
+      id: date
+      run: |
+        DATE=$(date +'%Y%m%d-%H%M')
+        echo "PACKAGED_OUTPUTDATE=${{ github.run_id }}_$DATE" >> $GITHUB_ENV
+        
     - name: 清理系统空间
       run: |
         sudo apt-get clean
@@ -97,31 +104,21 @@ jobs:
         if-no-files-found: ignore
         
         
-    - name: 创建发布版本
-      id: create_release
-      uses: softprops/action-gh-release@v1
+    # --- 步骤 7: 上传到 Release (新增功能) ---
+    - name: 上传到 Release
+      if: ${{ steps.compile.outcome == 'success' }}  # 仅在编译成功时触发
+      uses: ncipollo/release-action@v1
       with:
-        tag_name: v${{ github.run_number }}
-        name: 发布版本 v${{ github.run_number }}
+        tag: OpenWrt_nokia_ea0326gmp_${{ env.PACKAGED_OUTPUTDATE }}
+        artifacts: "lede/bin/targets/*/*/*.bin"      # 匹配所有固件文件
+        allowUpdates: true
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          基于 Lean 的 LEDE 源码构建
+          ### 基于 Lean 的 LEDE 源码构建
+          **首次使用建议全新刷写**
           
-          首次使用建议全新刷写
-          
-          基本信息
-          
-          管理 IP: 192.168.1.1
-          用户名: root
-          密码: password
-          设备型号: nokia_ea0326gmp
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
-    - name: 上传固件到发布版本
-      uses: softprops/action-gh-release@v1
-      with:
-        files: lede/bin/targets/**/*.bin
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          **基本信息**
+          - 管理 IP: 192.168.1.1
+          - 用户名: root
+          - 密码: password
+          - 设备型号: nokia_ea0326gmp
