--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -22,7 +22,19 @@ jobs:
         echo "初始空间使用情况："
         echo "======================="
         df -h
-        
+
+    - name: 设置缓存
+      uses: actions/cache@v3
+      id: cache
+      with:
+        path: |
+          lede/ccache
+          lede/dl
+        key: ${{ runner.os }}-lede-${{ hashFiles('.config') }}-${{ github.sha }}
+        restore-keys: |
+          ${{ runner.os }}-lede-${{ hashFiles('.config') }}-
+          ${{ runner.os }}-lede-
+
     - name: 清理系统空间
       run: |
         sudo apt-get clean
@@ -70,6 +82,14 @@ jobs:
         # 更新 feeds
         ./scripts/feeds update -a
         ./scripts/feeds install -a
+        
+        # 显示缓存状态
+        if [ "${{ steps.cache.outputs.cache-hit }}" == 'true' ]; then
+          echo "使用缓存加速编译"
+          ccache -s
+        else
+          echo "未使用缓存，将创建新的缓存"
+        fi
         
     - name: 复制配置文件
       run: |
