--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -69,7 +69,7 @@ jobs:
         git clone https://github.com/coolsnowwolf/lede.git
         cd lede
         # 设置 ccache
-        ccache -M 10G
+        ccache -M 15G
         # 设置编译参数
         echo 'CONFIG_CCACHE=y' >> .config
         echo 'CONFIG_CCACHE_DIR="/tmp/ccache"' >> .config
@@ -79,6 +79,9 @@ jobs:
         echo 'CONFIG_SINGLE_IMAGE_FILESYSTEM=y' >> .config
         echo 'CONFIG_TARGET_ROOTFS_SQUASHFS=y' >> .config
         echo 'CONFIG_TARGET_IMAGES_GZIP=y' >> .config
+        # 添加内存保护
+        echo 'CONFIG_TARGET_OPTIMIZATION="-Os -pipe"' >> .config
+        echo 'CONFIG_TARGET_OPTIMIZATION_FOR_SIZE=y' >> .config
         # 更新 feeds
         ./scripts/feeds update -a
         ./scripts/feeds install -a
@@ -99,12 +102,11 @@ jobs:
       run: |
         cd lede
         make defconfig
-        # 使用多核编译但限制内存使用
-        # -j$(nproc) 使用所有可用核心
-        # -l$(nproc) 限制每个核心的负载
-        # V=s 显示详细输出
-        # 使用 ionice 和 nice 调整进程优先级
-        ionice -c 3 nice -n 19 make -j$(nproc) -l$(nproc) V=s 2>&1 | tee build.log
+        # 使用 mian.yml 的编译参数，但添加内存保护
+        # 使用 nproc+1 核心，但限制最大内存使用
+        # 使用 ulimit 限制内存使用，留出 1GB 给系统
+        ulimit -v 5000000  # 限制虚拟内存使用为 5GB，给系统留出 2GB
+        make -j$(($(nproc) + 1)) V=s 2>&1 | tee build.log
         if [ $? -ne 0 ]; then
           echo "编译失败，保存错误日志"
           cp build.log ../build_error.log
