--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -132,36 +132,29 @@ jobs:
           build_error.log
         if-no-files-found: ignore
         
-    - name: 创建标签
-      run: |
-        git tag -a "v${{ github.run_number }}" -m "Release v${{ github.run_number }}"
-        git push origin "v${{ github.run_number }}"
-        
-    - name: 创建发布版本
-      id: create_release
-      uses: softprops/action-gh-release@v1
+    - name: 上传到 Release
+      if: ${{ steps.compile.outcome == 'success' }}
+      uses: ncipollo/release-action@v1
       with:
-        tag_name: v${{ github.run_number }}
-        name: 发布版本 v${{ github.run_number }}
+        tag: OpenWrt_nokia_ea0326gmp_${{ github.run_number }}
+        artifacts: "lede/bin/targets/**/*.bin"
+        allowUpdates: true
+        token: ${{ secrets.GITHUB_TOKEN }}
         body: |
-          基于 Lean 的 LEDE 源码构建
+          ### 基于 Lean 的 LEDE 源码构建
+          **首次使用建议全新刷写**
           
-          首次使用建议全新刷写
+          **基本信息**
+          - 管理 IP: 192.168.1.1
+          - 用户名: root
+          - 密码: password
+          - 设备型号: nokia_ea0326gmp
           
-          基本信息
+          **固件说明**
+          - `*-initramfs-kernel.bin`: 完整系统镜像，适合首次刷机或系统恢复
+          - `*-squashfs-sysupgrade.bin`: 系统升级包，适合日常更新（保留配置）
           
-          管理 IP: 192.168.1.1
-          用户名: root
-          密码: password
-          设备型号: nokia_ea0326gmp
-        draft: false
-        prerelease: false
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        
-    - name: 上传固件到发布版本
-      uses: softprops/action-gh-release@v1
-      with:
-        files: lede/bin/targets/**/*.bin
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }} 
+          **使用建议**
+          - 首次刷机：使用 initramfs 版本
+          - 系统升级：使用 sysupgrade 版本
+          - 系统变砖：使用 initramfs 版本恢复 
