--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -99,6 +99,7 @@ jobs:
         cp .config lede/
         
     - name: 编译固件
+      id: compile
       run: |
         cd lede
         make defconfig
