--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -28,11 +28,10 @@ jobs:
       id: cache
       with:
         path: |
-          lede/ccache
-          lede/dl
-        key: ${{ runner.os }}-lede-${{ hashFiles('.config') }}-${{ github.sha }}
+          ccache
+          dl
+        key: ${{ runner.os }}-lede-${{ hashFiles('.config') }}
         restore-keys: |
-          ${{ runner.os }}-lede-${{ hashFiles('.config') }}-
           ${{ runner.os }}-lede-
 
     - name: 清理系统空间
@@ -66,13 +65,16 @@ jobs:
 
     - name: 设置编译环境
       run: |
+        rm -rf lede
         git clone https://github.com/coolsnowwolf/lede.git
+        ln -sf $GITHUB_WORKSPACE/ccache lede/ccache
+        ln -sf $GITHUB_WORKSPACE/dl lede/dl
         cd lede
         # 设置 ccache
         ccache -M 15G
         # 设置编译参数
         echo 'CONFIG_CCACHE=y' >> .config
-        echo 'CONFIG_CCACHE_DIR="/tmp/ccache"' >> .config
+        echo 'CONFIG_CCACHE_DIR="$GITHUB_WORKSPACE/ccache"' >> .config
         echo 'CONFIG_CCACHE_BIN="/usr/bin/ccache"' >> .config
         # 优化编译配置
         echo 'CONFIG_BUILDBOT=y' >> .config
@@ -133,6 +135,12 @@ jobs:
           build_error.log
         if-no-files-found: ignore
         
+    - name: 生成构建信息
+      id: buildinfo
+      run: |
+        echo "BUILD_DATE=$(date -u +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_ENV
+        echo "GIT_REV=$(git -C lede rev-parse --short HEAD)" >> $GITHUB_ENV
+        
     - name: 上传到 Release
       if: ${{ steps.compile.outcome == 'success' }}
       uses: ncipollo/release-action@v1
@@ -158,4 +166,9 @@ jobs:
           **使用建议**
           - 首次刷机：使用 initramfs 版本
           - 系统升级：使用 sysupgrade 版本
-          - 系统变砖：使用 initramfs 版本恢复 
+          - 系统变砖：使用 initramfs 版本恢复
+          
+          **构建信息**
+          - 构建编号: ${{ github.run_number }}
+          - 构建日期: ${{ env.BUILD_DATE }}
+          - 源码版本: ${{ env.GIT_REV }} 
