--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -23,17 +23,6 @@ jobs:
         echo "======================="
         df -h
 
-    - name: 设置缓存
-      uses: actions/cache@v3
-      id: cache
-      with:
-        path: |
-          ccache
-          dl
-        key: ${{ runner.os }}-lede-${{ hashFiles('.config') }}
-        restore-keys: |
-          ${{ runner.os }}-lede-
-
     - name: 清理系统空间
       run: |
         sudo apt-get clean
@@ -67,34 +56,19 @@ jobs:
       run: |
         rm -rf lede
         git clone https://github.com/coolsnowwolf/lede.git
-        ln -sf $GITHUB_WORKSPACE/ccache lede/ccache
-        ln -sf $GITHUB_WORKSPACE/dl lede/dl
         cd lede
-        # 设置 ccache
         ccache -M 15G
-        # 设置编译参数
         echo 'CONFIG_CCACHE=y' >> .config
-        echo 'CONFIG_CCACHE_DIR="$GITHUB_WORKSPACE/ccache"' >> .config
+        echo 'CONFIG_CCACHE_DIR="/tmp/ccache"' >> .config
         echo 'CONFIG_CCACHE_BIN="/usr/bin/ccache"' >> .config
-        # 优化编译配置
         echo 'CONFIG_BUILDBOT=y' >> .config
         echo 'CONFIG_SINGLE_IMAGE_FILESYSTEM=y' >> .config
         echo 'CONFIG_TARGET_ROOTFS_SQUASHFS=y' >> .config
         echo 'CONFIG_TARGET_IMAGES_GZIP=y' >> .config
-        # 添加内存保护
         echo 'CONFIG_TARGET_OPTIMIZATION="-Os -pipe"' >> .config
         echo 'CONFIG_TARGET_OPTIMIZATION_FOR_SIZE=y' >> .config
-        # 更新 feeds
         ./scripts/feeds update -a
         ./scripts/feeds install -a
-        
-        # 显示缓存状态
-        if [ "${{ steps.cache.outputs.cache-hit }}" == 'true' ]; then
-          echo "使用缓存加速编译"
-          ccache -s
-        else
-          echo "未使用缓存，将创建新的缓存"
-        fi
         
     - name: 复制配置文件
       run: |
