--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -79,35 +79,13 @@ jobs:
       run: |
         cd lede
         make defconfig
-        # 使用 mian.yml 的编译参数，但添加内存保护
-        # 使用 nproc+1 核心，但限制最大内存使用
-        # 使用 ulimit 限制内存使用，留出 1GB 给系统
-        ulimit -v 5000000  # 限制虚拟内存使用为 5GB，给系统留出 2GB
-        make -j$(($(nproc) + 1)) V=s 2>&1 | tee build.log
+        ulimit -v 6000000  # 限制虚拟内存使用为 6GB
+        make -j$(($(nproc) + 1)) V=s
         if [ $? -ne 0 ]; then
-          echo "编译失败，保存错误日志"
-          cp build.log ../build_error.log
+          echo "编译失败"
           exit 1
         fi
-        # 编译完成后清理
         make clean
-        
-    - name: 保存编译日志
-      if: always()
-      run: |
-        if [ -f lede/build.log ]; then
-          cp lede/build.log build.log
-        fi
-        
-    - name: 上传编译日志
-      if: always()
-      uses: actions/upload-artifact@v4
-      with:
-        name: build-logs
-        path: |
-          build.log
-          build_error.log
-        if-no-files-found: ignore
         
     - name: 生成构建信息
       id: buildinfo
@@ -120,7 +98,7 @@ jobs:
       uses: ncipollo/release-action@v1
       with:
         tag: OpenWrt_nokia_ea0326gmp_${{ github.run_number }}
-        artifacts: "lede/bin/targets/**/*.bin"
+        artifacts: "lede/bin/targets/*/*/*.bin"      # 匹配所有固件文件
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
         body: |
