--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -85,12 +85,25 @@ jobs:
           echo "编译失败"
           exit 1
         fi
-        make clean
+        
+    - name: 验证固件文件
+      run: |
+        cd lede
+        echo "检查固件文件是否存在："
+        ls -l bin/targets/*/*/*.bin || true
+        if [ ! -d "bin/targets" ]; then
+          echo "错误：固件目录不存在"
+          exit 1
+        fi
+        if ! ls bin/targets/*/*/*.bin 1> /dev/null 2>&1; then
+          echo "错误：未找到任何固件文件"
+          exit 1
+        fi
         
     - name: 生成构建信息
       id: buildinfo
       run: |
-        echo "BUILD_DATE=$(date -u +'%Y-%m-%d %H:%M:%S UTC')" >> $GITHUB_ENV
+        echo "BUILD_DATE=$(TZ='Asia/Shanghai' date +'%Y-%m-%d %H:%M:%S %Z')" >> $GITHUB_ENV
         echo "GIT_REV=$(git -C lede rev-parse --short HEAD)" >> $GITHUB_ENV
         
     - name: 上传到 Release
