--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -110,7 +110,7 @@ jobs:
       if: ${{ steps.compile.outcome == 'success' }}
       uses: ncipollo/release-action@v1
       with:
-        tag: OpenWrt_nokia_ea0326gmp_${{ github.run_number }}
+        tag: OpenWrt_nokia_ea0326gmp_${{ env.BUILD_DATE }}
         artifacts: "lede/bin/targets/*/*/*.bin"      # 匹配所有固件文件
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
