--- a/.github/workflows/main2.yml
+++ b/.github/workflows/main2.yml
@@ -104,13 +104,14 @@ jobs:
       id: buildinfo
       run: |
         echo "BUILD_DATE=$(TZ='Asia/Shanghai' date +'%Y-%m-%d %H:%M:%S %Z')" >> $GITHUB_ENV
+        echo "BUILD_TAG=$(TZ='Asia/Shanghai' date +'%Y%m%d')" >> $GITHUB_ENV
         echo "GIT_REV=$(git -C lede rev-parse --short HEAD)" >> $GITHUB_ENV
         
     - name: 上传到 Release
       if: ${{ steps.compile.outcome == 'success' }}
       uses: ncipollo/release-action@v1
       with:
-        tag: OpenWrt_nokia_ea0326gmp_${{ env.BUILD_DATE }}
+        tag: OpenWrt_nokia_ea0326gmp_${{ env.BUILD_TAG }}
         artifacts: "lede/bin/targets/*/*/*.bin"      # 匹配所有固件文件
         allowUpdates: true
         token: ${{ secrets.GITHUB_TOKEN }}
@@ -134,6 +135,5 @@ jobs:
           - 系统变砖：使用 initramfs 版本恢复
           
           **构建信息**
-          - 构建编号: ${{ github.run_number }}
           - 构建日期: ${{ env.BUILD_DATE }}
           - 源码版本: ${{ env.GIT_REV }} 
