--- a/.github/workflows/main4.yml
+++ b/.github/workflows/main4.yml
@@ -27,7 +27,11 @@ jobs:
       run: |
         sudo apt-get clean
         sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
-
+        echo "======================="
+        echo "清理后空间使用情况："
+        echo "======================="
+        df -h
+        
     # 步骤3：设置分层缓存
     - name: 资源缓存（下载文件）
       uses: actions/cache@v3
