--- a/.github/workflows/main4.yml
+++ b/.github/workflows/main4.yml
@@ -23,10 +23,17 @@ jobs:
         fetch-depth: 1
 
     # 步骤2：系统空间优化
-    - name: 清理系统空间
+      name: 清理系统空间
       run: |
         sudo apt-get clean
-        sudo rm -rf /usr/share/dotnet /usr/local/lib/android /opt/ghc
+        sudo apt-get autoremove -y
+        sudo rm -rf /usr/share/dotnet
+        sudo rm -rf /usr/local/lib/android
+        sudo rm -rf /opt/ghc
+        sudo rm -rf /opt/hostedtoolcache/CodeQL
+        sudo rm -rf /opt/microsoft
+        sudo rm -rf /opt/pipx
+        sudo rm -rf /usr/share/swift
         echo "======================="
         echo "清理后空间使用情况："
         echo "======================="
