--- a/.github/workflows/main4.yml
+++ b/.github/workflows/main4.yml
@@ -23,7 +23,7 @@ jobs:
         fetch-depth: 1
 
     # 步骤2：系统空间优化
-      name: 清理系统空间
+    - name: 清理系统空间
       run: |
         sudo apt-get clean
         sudo apt-get autoremove -y
@@ -81,8 +81,14 @@ jobs:
       run: |
         sudo apt-get update -y
         sudo apt-get install -y \
-          build-essential ccache python3 rsync subversion \
-          libncurses-dev gawk flex quilt libssl-dev xsltproc \
+          ack antlr3 asciidoc autoconf automake autopoint binutils bison build-essential \
+          bzip2 ccache cmake cpio curl device-tree-compiler flex gawk gcc-multilib \
+          gettext genisoimage git gperf help2man intltool libc6-dev-i386 libelf-dev \
+          libfuse-dev libglib2.0-dev libgmp3-dev libltdl-dev libmpc-dev libmpfr-dev \
+          libncurses5-dev libncursesw5-dev libpython3-dev libreadline-dev libssl-dev \
+          libtool llvm ninja-build p7zip p7zip-full patch pkgconf python3 python3-pyelftools \
+          python3-setuptools qemu-utils rsync scons squashfs-tools subversion swig texinfo \
+          uglifyjs upx-ucl unzip vim wget xmlto xxd zlib1g-dev jq zstd libzstd-dev
 
     # 步骤6：配置编译环境
     - name: 配置Feeds
